# Attonate

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
src/: App.jsx  TaxonLanding.jsx  firebase.js
taxonsite/: settings.py
