[project]
name = "app"
version = "0.1.0"
dependencies = [ "django>=5.0, <6.0", "dj-database-url>=3.0", "psycopg2-binary>=2.9", "whitenoise>=6.7", "django-allauth[socialaccount]>=65.0", "cloudinary>=1.40", "django-cloudinary-storage>=0.3", "pillow>=10.0", "python-dotenv>=1.0", "resend>=2.0", "twilio>=9.0" ]
requires-python = "~=3.12.0"
